@@ -15,6 +15,9 @@ $Id$
 6.6.0 Beta 2
 ============
 
+* [DanielPharos]: Model Editor - Now bones can be moved around in the treeview even though other items
+          - are also selected.
+
 * [DanielPharos]: Fixed AutoSave-setting not being applied.
 
 * [cdunde]: Model Editor - Fixed model importers to display proper skin once a model is imported.
